# docs/swagger.yaml
@@ -1,4 +1,4 @@
-basePath: /api/v2
+basePath: /api/v1
 definitions:
   dto.PreferenceResponse:
     properties:
@@ -46,9 +46,14 @@ paths:
   /auth/google/callback:
     get:
       description: Handles Google OAuth callback and creates a session
+      produces:
+      - application/json
       responses:
-        "303":
-          description: See Other
+        "200":
+          description: logged in successfully
+          schema:
+            additionalProperties: true
+            type: object
         "400":
           description: Bad Request
           schema:
@@ -71,21 +76,33 @@ paths:
       - Auth
   /auth/logout:
     post:
+      produces:
+      - application/json
       responses:
-        "204":
-          description: No Content
+        "200":
+          description: logged out successfully
+          schema:
+            additionalProperties: true
+            type: object
       summary: Logout user
       tags:
       - Auth
   /me:
     delete:
+      produces:
+      - application/json
       responses:
-        "204":
-          description: No Content
+        "200":
+          description: user deleted
+          schema:
+            additionalProperties: true
+            type: object
       summary: Delete current user
       tags:
       - Me
     get:
+      produces:
+      - application/json
       responses:
         "200":
           description: OK
@@ -95,6 +112,8 @@ paths:
       tags:
       - Me
     patch:
+      consumes:
+      - application/json
       parameters:
       - description: Update user payload
         in: body
@@ -102,6 +121,8 @@ paths:
         required: true
         schema:
           $ref: '#/definitions/dto.UserUpdateRequest'
+      produces:
+      - application/json
       responses:
         "200":
           description: OK
@@ -142,12 +163,16 @@ paths:
       - Preferences
   /users/{id}:
     get:
+      consumes:
+      - application/json
       parameters:
       - description: User ID
         in: path
         name: id
         required: true
         type: string
+      produces:
+      - application/json
       responses:
         "200":
           description: OK
